cluster/kubernetes/apps/internal/searxng/ingress/searxng-http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name searxng
  namespace: internal
  labels:
    route-label: external-dns-internal
  annotations:
    gatus.home-operations.com/enabled: 'true'
spec:
  hostnames:
    - search.local.cjsolsen.com
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: *name
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: *name
          port: 8080
